# aviso

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: doc.yaml  tests.yaml
altimetry_downloader_aviso/: __init__.py  auth.py  cli.py  core.py  tds_client.py
altimetry_downloader_aviso/catalog_client/: client.py  granule_discoverer.py
altimetry_downloader_aviso/catalog_client/geonetwork/: __init__.py  query_builder.py  response_parser.py
altimetry_downloader_aviso/catalog_client/geonetwork/models/: catalog_resp_model.py  model.py  product_resp_model.py
altimetry_downloader_aviso/catalog_client/resources/: tds_layout.yaml
aviso_client/: .gitignore  __init__.py  auth.py  cli.py  core.py  tds_client.py
aviso_client/catalog_client/: client.py  granule_discoverer.py
aviso_client/catalog_client/geonetwork/: __init__.py  query_builder.py  response_parser.py
aviso_client/catalog_client/geonetwork/models/: catalog_resp_model.py  dataclasses.py  model.py  product_resp_model.py
aviso_client/catalog_parser/: catalog_client.py  catalog_response_parser.py  granule_discoverer.py  json_parser.py  models.py
aviso_client/catalog_parser/models/: catalog_resp_model.py  dataclasses.py  product_resp_model.py
aviso_client/catalog_parser/resources/: tds_layout.yaml
aviso_client/catalogue_parser/: catalogue_client.py  granule_discoverer.py  json_parser.py  models.py
aviso_client/catalogue_parser/resources/: tds_layout.yaml
aviso_client/ocean_tools/io/: __init__.py  _filenames.py
aviso_client/ocean_tools/missions/: __init__.py  _phases.py
aviso_client/ocean_tools/swath/io/: __init__.py  _conventions.py  _definitions.py  _products.py
aviso_client/ocean_tools/time/: __init__.py  _conversions.py  _operations.py  _periods.py
docs/: api.rst  changes.rst  conf.py  index.rst
docs/basic_usage/: advanced_usage.rst  api_usage.rst  authentication.rst
docs/getting_started/: command_line_interface.rst  installation.rst  python_interface.rst
tests/: conftest.py  test_auth.py  test_cli.py  test_core.py  test_tds_client.py
tests/ catalog_client/: test_client.py  test_granule_discoverer.py
tests/ catalog_client/geonetwork/: test_query_builder.py  test_response_parser.py
tests/catalog_client/: test_client.py  test_granule_discoverer.py
tests/catalog_client/geonetwork/: test_query_builder.py  test_response_parser.py
tests/catalog_parser/: test_catalog_client.py  test_catalog_response_parser.py  test_granule_discoverer.py  test_json_parser.py
tests/catalogue_parser/: test_catalog_client.py  test_catalogue_client.py  test_granule_discoverer.py
tests/fixtures/: catalog_response.json  tds_layout.yaml
tests/geonetwork/: test_query_builder.py  test_response_parser.py
tests/resources/: bad_catalog_response.json  bad_product_responses.json  catalog_resp_model.py  catalog_response.json  catalog_response2.json  product_resp_model.py  product_response.json  product_response2.json  tds_layout.yaml
