[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "altimetry-downloader-aviso"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "numpy",
    "siphon",
    "typer",
    "rich",
    "files-collections",
    "pyyaml",
    "pydantic"
]

[project.scripts]
altimetry-downloader-aviso = "altimetry_downloader_aviso.cli:app"

[project.optional-dependencies]
tests = [
    "pytest",
    "pyyaml",
]
doc = ["sphinx", "sphinx-autodoc-typehints", "sphinx_rtd_theme"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project.urls]
Homepage = "TODO"
Documentation = "TODO"
Repository = "TODO"
Issues = "TODO"
Changelog = "TODO"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_first_party = ["altimetry_downloader_aviso"]

[tool.pytest.ini_options]
addopts=["--import-mode=importlib"]
